--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
+body {
+    box-sizing: border-box;
+}
+
 .container {
     display: flex;
-    width: 600px;
-    height: 600px;
+    flex-direction: column;
+    width: 960px;
+    height: 960px;
     border: solid black 1px;
+}
+
+.row {
+    display: flex;
+    flex: 1;
+}
+.square {
+    border: solid grey 1px;
+    flex: 1;
 }
